@@ -9,6 +9,8 @@ Version 1.3.2 (unreleased)
 * Platform Support
   - add GCC 4.6
   - add clang++ 2.9
+  - update ICPC 12.0 (Intel C++ Composer XE 2011 Update 4): drop workarounds
+    for bugs fixed in Update 4
   - Boost 1.46: Boost Filesystem Version 3
 
 ------------------------------------------
